Automatically generated comments for newspaper_recipe

--- a/web_scraper/environment.yml
+++ b/web_scraper/environment.yml
@@ -6,4 +6,8 @@ dependencies:
   - requests
   - yaml
   - pyyaml
+  - pandas
+  - ipykernel
+  - nltk
+  - matplotlib
 prefix: /home/paulmilmor/anaconda3/envs/web_scrapper
